[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

# import bunker here
bunker = { path = "../bunker" }
models = { path = "../models" }

tokio = "1.33.0"
async-trait = "0.1.74"
tonic = "0.10.2"
tokio-stream = "0.1.14"

tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version="0.27.1", features=["resource"]}
